Start Wikidata extension based on Wikidata-Toolkit

--- a/.classpath
+++ b/.classpath
@@ -10,6 +10,7 @@
 	<classpathentry kind="src" path="extensions/jython/src"/>
 	<classpathentry kind="src" path="extensions/pc-axis/src"/>
 	<classpathentry kind="src" path="extensions/sample/src"/>
+	<classpathentry kind="src" path="extensions/wikidata/src"/>
 	<classpathentry kind="src" path="main/tests/server/src"/>
 	<classpathentry exported="true" kind="lib" path="main/webapp/WEB-INF/lib/ant-tools-1.8.0.jar"/>
 	<classpathentry exported="true" kind="lib" path="main/webapp/WEB-INF/lib/arithcode-1.1.jar"/>
