--- a/extensions/build.xml
+++ b/extensions/build.xml
@@ -13,7 +13,8 @@
     <ant dir="jython/" target="build" />
     <ant dir="gdata/" target="build" />
     <ant dir="pc-axis/" target="build" />
-  	<ant dir="database/" target="build" />
+    <ant dir="database/" target="build" />
+    <ant dir="wikidata/" target="build" />
   </target>
 
   <target name="clean">
@@ -22,12 +23,13 @@
     <ant dir="jython/" target="clean" />
     <ant dir="gdata/" target="clean" />
     <ant dir="pc-axis/" target="clean" />
-  	<ant dir="database/" target="clean" />
+    <ant dir="database/" target="clean" />
+    <ant dir="wikidata/" target="clean" />
   </target>
 
   <target name="test">
     <echo message="Testing extensions" />
     <ant dir="jython/" target="test" />
-  	<ant dir="database/" target="test" />
+    <ant dir="database/" target="test" />
   </target>
 </project>
