Add wikidata tests to extensions/build.xml

--- a/extensions/build.xml
+++ b/extensions/build.xml
@@ -31,5 +31,6 @@
     <echo message="Testing extensions" />
     <ant dir="jython/" target="test" />
     <ant dir="database/" target="test" />
+    <ant dir="wikidata/" target="test" />
   </target>
 </project>
